syntax = "proto3";

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "./cart-service";

package cart;
// Message representing a single item in the shopping cart
message CartItem {
  int32 product_id = 1;
  int32 quantity = 2;
  int32 price_per_item = 3;
  string currency = 4;
}

// Message representing the user's shopping cart
message ShoppingCart {
  repeated CartItem items = 1;
  int32 total_price = 2;
  // You can add more fields as needed, such as user_id, created_at, etc.
}

// Message representing the request to add an item to the cart
message AddToCartRequest {
  int32 product_id = 1;
  int32 quantity = 2;
  string currency = 3;
  int32 userId = 4;
}

// Message representing the request to update the quantity of an item in the cart
message UpdateCartItemRequest {
  int32 product_id = 1;
  int32 quantity = 2;
  int32 userId = 3;
}

// Message representing the request to remove an item from the cart
message RemoveCartItemRequest {
  int32 product_id = 1;
  int32 userId = 2;
}

// Message representing the request to get the user's shopping cart
message GetShoppingCartRequest {
  int32 userId = 1; 
}

// Service definition for the shopping cart service
service CartService {
  // RPC method to add an item to the cart
  rpc AddToCart(AddToCartRequest) returns (ShoppingCart) {
    option (google.api.http) = {
      post: "/v1/cart/add"
      body: "*"
    };
  }

  // RPC method to update the quantity of an item in the cart
  rpc UpdateCartItem(UpdateCartItemRequest) returns (ShoppingCart) {
    option (google.api.http) = {
      put: "/v1/cart/update"
      body: "*"
    };
  }

  // RPC method to remove an item from the cart
  rpc RemoveCartItem(RemoveCartItemRequest) returns (ShoppingCart) {
    option (google.api.http) = {
      delete: "/v1/cart/remove/{product_id}"
    };
  }

  // RPC method to get the user's shopping cart
  rpc GetShoppingCart(GetShoppingCartRequest) returns (ShoppingCart) {
    option (google.api.http) = {
      get: "/v1/cart/get"
    };
  }
}
